--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row {
   display: flex;
@@ -117,7 +117,7 @@
   width: 226px;
 }
 .list-item >    .input-text {
-  width: 226px
+  width: 226px;
 }
 .button-img {
   height: 2em;
@@ -130,18 +130,18 @@
 
 /* Completed */
 #completed-tasks .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list-item .input-text {
-  display: none
+  display: none;
 }
 
 .list .edit-mode .input-text {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .task {
