--- a/style.css
+++ b/style.css
@@ -39,10 +39,12 @@
   margin: 0;
   padding: 0px;
 }
-.list-item, .heading {
+.list-item,
+.heading {
   list-style: none;
 }
-.input,.button{
+.input,
+.button{
   outline: none;
 }
 .button {
