--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
   display: block;
   text-align: right;
 }
-.header-img {
+.header__img {
   width: 100%;
 }
-.header .more-info {
+.header__info {
   font-family: fantasy, cursive;
 }
 
@@ -27,27 +27,27 @@
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task__label,
+.task__input--text {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row {
+.task__row {
   display: flex;
 }
-.list {
+.task__list {
   margin: 0;
   padding: 0px;
 }
-.list-item,
-.heading {
+.task__item {
   list-style: none;
 }
-.input,
-.button{
+.task__input,
+.task__button{
   outline: none;
 }
-.button {
+.task__button {
   background: none;
   border: 0px;
   color: #888;
@@ -56,12 +56,11 @@
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-.button:hover {
+.task__button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-.heading,
-.new-task-label {
+.task__title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +69,7 @@
   margin: 0;
   text-transform: uppercase;
 }
-.input-text {
+.task__input--text {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,21 +81,21 @@
   font-family: Lato, sans-serif;
   color: #888;
 }
-.input-text:focus {
+.task__input--text:focus {
   color: #333;
 }
 
 /* New Task */
-.new-task-label {
+.task__title {
   display: block;
   margin: 0 0 20px;
 }
-#new-task {
+.task__input--new {
   width: 318px;
 }
 
 /* Task list */
-.list-item {
+.task__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -105,51 +104,52 @@
   justify-content: space-between;
   align-items: center;
 }
-.list-item > * {
+.task__item > * {
   vertical-align: middle;
 }
 
-.list-item > .input-checkbox {
+.task__input--checkbox {
   margin: 0 10px;
 }
-.list-item > .task-label {
+.task__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.list-item >    .input-text {
+.task__input--text {
   width: 226px;
 }
-.button-img {
+.task__button-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.button-img:hover {
+.task__button-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks .task-label {
+#completed-tasks .task__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.list-item .input-text {
+.task__item .task__input--text {
   display: none;
 }
 
-.list .edit-mode .input-text {
+.task__item.task__item--edit-mode .task__input--text {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode .task {
+.task__item--edit-mode .task__label,
+.task__item--edit-mode .task__input--text  {
   display: none;
 }
 
-.title {
+.header__title {
   display: none;
 }
